--- a/src/main/resources/static/pregledRada.html
+++ b/src/main/resources/static/pregledRada.html
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
           <div class="navbar-nav">
-              <img src="logo.png" style="height: 50px; width:100px" class="me-5">
+              <img src="../../../../../../OneDrive/Radna%20površina/dizajn/logo.png" style="height: 50px; width:100px" class="me-5">
               <a class="nav-link  me-4" href="unosRadnogVremena.html">Unos radnog vremena</a>
               <a class="nav-link active me-4" href="radniSatiZaposlenika.html">Pregled rada</a>
           </div>
