--- a/src/main/resources/static/unosRadnogVremena.html
+++ b/src/main/resources/static/unosRadnogVremena.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-nav">
-                <img src="logo.png" style="height: 50px; width:100px" class="me-5">
+                <img src="../../../../../../OneDrive/Radna%20površina/dizajn/logo.png" style="height: 50px; width:100px" class="me-5">
                 <a class="nav-link active me-4" href="#">Unos radnog vremena</a>
                 <a class="nav-link me-4" href="pregledRada.html">Pregled rada</a>
             </div>
