--- a/src/main/resources/static/zaposlenici.html
+++ b/src/main/resources/static/zaposlenici.html
@@ -70,7 +70,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-nav">
-                <img src="logo.png" style="height: 50px; width:100px" class="me-5">
+                <img src="../../../../../../OneDrive/Radna%20površina/dizajn/logo.png" style="height: 50px; width:100px" class="me-5">
                 <a class="nav-link active me-4" href="#">Zaposlenici</a>
                 <a class="nav-link me-4" href="#">Timovi</a>
                 <a class="nav-link me-4" href="#">Odsutnosti</a>
