--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -953,7 +953,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <img src="/Users/dinkomrkonjic/Desktop/Slika zaslona 2025-03-04 u 17.00.26 kopija.png" id="header-logo">
+                <img src="/logo.png" id="header-logo">
                 <h1>ShiftTracker</h1>
             </div>
             <ul class="nav-links">
@@ -961,7 +961,7 @@
                 <li><a href="#funkcionalnosti" class="nav-link" data-section="funkcionalnosti">Funkcionalnosti</a></li>
                 <li><a href="#demo" class="nav-link" data-section="demo">Demo</a></li>
                 <li><a href="#kontakt" class="nav-link" data-section="kontakt">Kontakt</a></li>
-                <li><a href="location:/login.html" class="btn-primary">Prijava</a></li>
+                <li><a href="/login" class="btn-primary">Prijava</a></li>
             </ul>
             <div class="menu-toggle">
                 <i class="bi bi-list"></i>
