--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -542,7 +542,7 @@
         /* CTA sekcija */
         #cta {
           padding: 80px 0;
-          background-color: var(--primary-color);
+<!--          background-color: var(&#45;&#45;primary-color);-->
           color: var(--white);
           text-align: center;
         }
@@ -1105,63 +1105,65 @@
         <div class="cta-content">
             <h2>Spremni ste unaprijediti upravljanje evidencijom rada?</h2>
             <p>Kontaktirajte nas danas i dogovorite besplatnu demonstraciju sustava prilagođenu vašim potrebama.</p>
-            <a href="#kontakt" class="btn-primary">Zatražite demo</a>
+<!--            <a href="#kontakt" class="btn-primary">Zatražite demo</a>-->
         </div>
     </div>
 </section>
 
 <!-- Kontakt sekcija -->
-<section id="kontakt">
-    <div class="container">
-        <h2 class="section-title">Kontaktirajte nas</h2>
-        <div class="contact-container">
-            <div class="contact-info">
-                <div class="contact-item">
-                    <i class="bi bi-geo-alt"></i>
-                    <div>
-                        <h3>Adresa</h3>
-                        <p>Bobovje 52G, 49000 Krapina</p>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <i class="bi bi-envelope"></i>
-                    <div>
-                        <h3>Email</h3>
-                        <p>info@ShiftTracker.hr</p>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <i class="bi bi-telephone"></i>
-                    <div>
-                        <h3>Telefon</h3>
-                        <p>01 123-456</p>
-                    </div>
-                </div>
-            </div>
-            <div class="contact-form">
-                <form id="contactForm">
-                    <div class="form-group">
-                        <label for="name">Ime i prezime</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email adresa</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="organization">Naziv organizacije</label>
-                        <input type="text" id="organization" name="organization" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Poruka</label>
-                        <textarea id="message" name="message" rows="4" required></textarea>
-                    </div>
-                    <button type="submit" class="btn-primary">Pošalji upit</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
+<!--<section id="kontakt">-->
+<!--    <div class="container">-->
+<!--        <h2 class="section-title">Kontaktirajte nas</h2>-->
+<!--        <div class="contact-container">-->
+<!--            <div class="contact-info">-->
+<!--                <div class="contact-item">-->
+<!--                    <i class="bi bi-geo-alt"></i>-->
+<!--                    <div>-->
+<!--                        <h3>Adresa</h3>-->
+<!--                        <p>Bobovje 52G, 49000 Krapina</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="contact-item">-->
+<!--                    <i class="bi bi-envelope"></i>-->
+<!--                    <div>-->
+<!--                        <h3>Email</h3>-->
+<!--                        <p>info@ShiftTracker.hr</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="contact-item">-->
+<!--                    <i class="bi bi-telephone"></i>-->
+<!--                    <div>-->
+<!--                        <h3>Telefon</h3>-->
+<!--                        <p>01 123-456</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="contact-form">-->
+<!--                <form id="contactForm">-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="name">Ime i prezime</label>-->
+<!--                        <input type="text" id="name" name="name" required>-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="email">Email adresa</label>-->
+<!--                        <input type="email" id="email" name="email" required>-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="organization">Naziv organizacije</label>-->
+<!--                        <input type="text" id="organization" name="organization" required>-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="message">Poruka</label>-->
+<!--                        <textarea id="message" name="message" rows="4" required></textarea>-->
+<!--                    </div>-->
+<!--                    <button type="submit" class="btn-primary">Pošalji upit</button>-->
+<!--                </form>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+
+
 
 <!-- Footer -->
 <footer>
